Fixed mobile issues, changed some server communication. -Added new packet type field to messages sent from the server for easier parsing by client. -Fixed issue on mobile browsers where a vertical gutter would appear on the right side of the app. -Fixed issue where the labels on the PlayerDisplay would not be hidden.

--- a/secret-hitler-online-interface/src/App.css
+++ b/secret-hitler-online-interface/src/App.css
@@ -1,6 +1,9 @@
 @import './variables.css';
 
-body {
+html,body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
     background-color: var(--backgroundLight);
 }
 
@@ -208,4 +211,3 @@ textarea {
     0% {left:0; opacity: 1;}
     100% {left: -100%; opacity: 0; visibility: hidden}
 }
-
