--- a/secret-hitler-online-interface/src/EventBar.css
+++ b/secret-hitler-online-interface/src/EventBar.css
@@ -11,6 +11,7 @@
     visibility: visible;
     z-index: 48;
     transition: visibility var(--eventBarIn);
+    box-sizing: border-box;
 }
 
 #bar-background {
