--- a/secret-hitler-online-interface/src/selectable.css
+++ b/secret-hitler-online-interface/src/selectable.css
@@ -3,6 +3,7 @@
 .selectable {
     background-color: var(--selectionNone);
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .selectable.selected {
